compiler/tests/fixtures/compile_errors/duplicate_method_in_contract.fe
contract Foo:

    pub def bar():
        pass

    pub def bar():
        pass
